# eebrightbox

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  development.txt  requirements.txt  setup.cfg
docs/: example.py
eebrightbox/: __init__.py  core.py  errors.py  helpers.py
eebrightbox/router/: __init__.py  brightbox2.py  smarthub.py
tests/eebrightbox/: test_core.py
tests/eebrightbox/responses/: devices.xml  ssids.xml
tests/eebrightbox/router/: test_brightbox2.py  test_smarthub.py
tests/eebrightbox/router/responses/: cgi_myNetwork.js  ssids.xml
