[metadata]
name = eebrightbox
summary = Connector for EE BrightBox routers.
description-file =
    README.rst
author = Krystian Galutowski
author-email = k.galutowski@gmail.com
home-page = https://github.com/krygal/eebrightbox
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    eebrightbox

[entry_points]
console_scripts =
    eebrightbox = eebrightbox:main

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
