[metadata]
name = eebrightbox
summary = Connector for EE BrightBox routers.
description-file =
    README.rst
author = Krystian Galutowski
author-email = k.galutowski@gmail.com
license = MIT
home-page = https://github.com/krygal/eebrightbox
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Home Automation
    Topic :: Internet
    Topic :: System :: Networking

[files]
packages =
    eebrightbox

[pbr]
warnerrors = True

[wheel]
universal = 0

[bdist_wheel]
universal = 0
